--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
 	<link rel="stylesheet" type="text/css" href="css/ext/bootstrap.min.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="css/common.css" media="screen" />
@@ -40,10 +41,58 @@
 
 		<hr style="border-top:2px solid #A0A0A0;">
 
+		<div class="container">
+			<div class="row-fluid">
+				<div class="span6">
+					<article >
+						<h5>About</h5>
+						<hr>
+						<p class="lead">
+							You are working on your lovely dovely <strong>laptop</strong> in a coffee shop, library, school, or any public spaces,
+							and you have to step out for coffee, smoke, washroom, friend, etc.
+							<strong>Simply put this site on</strong> and you are all set to go!
+						</p>
+					</article>
+				</div>
+				<div class="span6">
+					<h5>Sign Up</h5>
+					<hr>
+					<form class="form-horizontal">
+
+						<div class="control-group">
+							<label class="control-label" for="inputEmail">Email</label>
+							<div class="controls">
+								<input type="text" id="inputEmail" placeholder="Email">
+							</div>
+						</div>
+
+						<div class="control-group">
+							<label class="control-label" for="inputPassword">Password</label>
+							<div class="controls">
+								<input type="password" id="inputPassword" placeholder="Password">
+							</div>
+						</div>
+
+						<div class="control-group">
+							<div class="controls">
+								<label class="checkbox">
+									<input type="checkbox"> Keep me logged in
+								</label>
+								<button type="submit" class="btn">Sign in</button>
+							</div>
+						</div>
+
+					</form>
+				</div>
+			</div>
+
+			<div class="row-fluid">
+				<h5>How it works</h5>
+			</div>
+		</div>
+
 
 	</article>
-
-
 
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
 	<script type="text/javascript" src="js/ext/bootstrap.min.js"></script>
