--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
 						<p class="lead">
 							You are working on your lovely dovely <strong>laptop</strong> in a coffee shop, library, school, or any public spaces,
 							and you have to step out for coffee, smoke, washroom, friend, etc.
-							<strong>Simply put this site on</strong> and you are all set to go!
+							<strong>Simply put <a href=".">Devimon</a> on</strong> and you are all set to go!
 						</p>
 					</article>
 				</div>
@@ -78,7 +78,7 @@
 								<label class="checkbox">
 									<input type="checkbox"> Keep me logged in
 								</label>
-								<button type="submit" class="btn">Sign in</button>
+								<button type="submit" class="btn">Sign in / Login</button>
 							</div>
 						</div>
 
@@ -87,7 +87,15 @@
 			</div>
 
 			<div class="row-fluid">
-				<h5>How it works</h5>
+				<div class="span12">
+					<h5>How it works</h5>
+					<p class="lead">
+						When you bring <a href=".">Devimon</a> up on your browser, the browser maintains a conversation with  <a href=".">Devimon</a>.
+						As soon as your browser stops talking (when the laptop is closed), <a href=".">Devimon</a> assumes that somebody has closed the laptop, possibly with the intention of stealing it, and sends you an immediate SMS message. 
+
+					</p>
+			</div>
+
 			</div>
 		</div>
 
