--- a/public/index.html
+++ b/public/index.html
@@ -12,100 +12,35 @@
 			<a class="brand" href="#">Devimon</a>
 			<ul class="nav">
 				<li class="active"><a href="#">Home</a></li>
-				<li><a href="#">Link</a></li>
-				<li><a href="#">Link</a></li>
+				<li><a href="#">FAQ</a></li>
+				<li><a href="#">About</a></li>
 			</ul>
 		</div>
 	</div>
 
 
-	<article class="container">
-
-		<!-- <div class="row-fluid">&nbsp</div> -->
-
-		<div class="container">
-			<div class="row-fluid">
-				<div class="span10">
-					<h1 style="font-size:10em; line-height:100px;">Devimon</h1>
-				</div>
-				<div class="span2 pull-right">
-					<img src="http://robohash.org/devimon"/>
-				</div>
-			</div>
-			<div class="row-fluid">
-				<div class="span8 pull-right">
-					<h1 style="font-size:4em; line-height:30px;">Keeping your device safe.</h1>
-				</div>
-			</div>
-		</div>
-
-		<hr style="border-top:2px solid #A0A0A0;">
-
-		<div class="container">
-			<div class="row-fluid">
-				<div class="span6">
-					<article >
-						<h5>About</h5>
-						<hr>
-						<p class="lead">
-							You are working on your lovely dovely <strong>laptop</strong> in a coffee shop, library, school, or any public spaces,
-							and you have to step out for coffee, smoke, washroom, friend, etc.
-							<strong>Simply put <a href=".">Devimon</a> on</strong> and you are all set to go!
-						</p>
-					</article>
-				</div>
-				<div class="span6">
-					<h5>Sign Up</h5>
-					<hr>
-					<form class="form-horizontal">
-
-						<div class="control-group">
-							<label class="control-label" for="inputEmail">Email</label>
-							<div class="controls">
-								<input type="text" id="inputEmail" placeholder="Email">
-							</div>
-						</div>
-
-						<div class="control-group">
-							<label class="control-label" for="inputPassword">Password</label>
-							<div class="controls">
-								<input type="password" id="inputPassword" placeholder="Password">
-							</div>
-						</div>
-
-						<div class="control-group">
-							<div class="controls">
-								<label class="checkbox">
-									<input type="checkbox"> Keep me logged in
-								</label>
-								<button type="submit" class="btn">Sign in / Login</button>
-							</div>
-						</div>
-
-					</form>
-				</div>
-			</div>
-
-			<div class="row-fluid">
-				<div class="span12">
-					<h5>How it works</h5>
-					<p class="lead">
-						When you bring <a href=".">Devimon</a> up on your browser, the browser maintains a conversation with  <a href=".">Devimon</a>.
-						As soon as your browser stops talking (when the laptop is closed), <a href=".">Devimon</a> assumes that somebody has closed the laptop, possibly with the intention of stealing it, and sends you an immediate SMS message. 
-
-					</p>
-			</div>
-
-			</div>
-		</div>
-
+	<article id="container" class="container">
 
 	</article>
+
+	<footer>
+		<div class="container">
+				<div class="pull-right">
+					<a href="#" style="margin-right:20px;">Terms</a>
+					<a href="#">Privacy</a>
+				</div>
+		</div>
+	</footer>
 
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
 	<script type="text/javascript" src="js/ext/bootstrap.min.js"></script>
 	<script src="/socket.io/socket.io.js"></script>
 	<script type="text/javascript" src="js/devimon_client.js"></script>
 	<script type="text/javascript" src="js/ext/slabtext.min.js"></script>
+	<script type="text/javascript" src="js/ext/underscore.min.1.3.3.js"></script>
+	<script type="text/javascript" src="js/ext/backbone.min.0.9.2.js"></script>
+	<script type="text/javascript" src="js/ext/mustache.js"></script>
+	<script data-main="js/main" src="js/ext/require.2.0.2.min.js"></script>
+
 </body>
 </html>
