--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,15 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="css/ext/bootstrap.min.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="css/common.css" media="screen" />
+
+	<title>Devimon</title>
 </head>
 
 <body style="background-color:whiteSmoke;">
 
 	<div class="navbar">
 		<div class="navbar-inner">
-			<a class="brand" href="#">Devimon</a>
+			<a class="brand" href=".">Devimon</a>
 			<ul class="nav">
 				<li class="active"><a href="#">Home</a></li>
 				<li><a href="#">FAQ</a></li>
@@ -17,7 +19,6 @@
 			</ul>
 		</div>
 	</div>
-
 
 	<article id="container" class="container">
 
@@ -36,7 +37,6 @@
 	<script type="text/javascript" src="js/ext/bootstrap.min.js"></script>
 	<script src="/socket.io/socket.io.js"></script>
 	<script type="text/javascript" src="js/devimon_client.js"></script>
-	<script type="text/javascript" src="js/ext/slabtext.min.js"></script>
 	<script type="text/javascript" src="js/ext/underscore.min.1.3.3.js"></script>
 	<script type="text/javascript" src="js/ext/backbone.min.0.9.2.js"></script>
 	<script type="text/javascript" src="js/ext/mustache.js"></script>
