--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,19 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="css/ext/bootstrap.min.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="css/common.css" media="screen" />
+	<script type="text/javascript">
+
+	  var _gaq = _gaq || [];
+	  _gaq.push(['_setAccount', 'UA-34673195-1']);
+	  _gaq.push(['_trackPageview']);
+
+	  (function() {
+	    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+	    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+	    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+	  })();
+
+	</script>
 
 	<title>Devimon</title>
 </head>
@@ -21,7 +34,7 @@
 	</div>
 
 	<article id="container" class="container">
-		
+
 		<div class="container">
 			<div class="row-fluid">
 				<div class="span10">
@@ -99,16 +112,12 @@
 		</div>
 
 
-
-
 		<h2>TODO</h2>
 		<ul>
 			<li>email confirmation</li>
-			<li>payment</li>
-			<li>US number support : done</li>
+			<li>payment - Done. need webhook</li>
 			<li>Google analytic</li>
 			<li>backend production config</li>
-			<li>A, CNAME update : done</li>
 		</ul>
 
 
