--- a/public/index.html
+++ b/public/index.html
@@ -52,6 +52,23 @@
 		<hr style="border-top:2px solid #A0A0A0;">
 
 		<div class="container">
+
+			<div class="row-fluid">
+				<div class="span12">
+					<script type="text/javascript"><!--
+					google_ad_client = "ca-pub-6585377934871161";
+					/* devimon */
+					google_ad_slot = "8181041869";
+					google_ad_width = 468;
+					google_ad_height = 60;
+					//-->
+					</script>
+					<script type="text/javascript"
+					src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+					</script>
+				</div>
+			</div>
+
 			<div class="row-fluid">
 				<div class="span6">
 					<article >
