--- a/public/index.html
+++ b/public/index.html
@@ -55,17 +55,17 @@
 
 			<div class="row-fluid">
 				<div class="span12">
-					<script type="text/javascript"><!--
-					google_ad_client = "ca-pub-6585377934871161";
-					/* devimon */
-					google_ad_slot = "8181041869";
-					google_ad_width = 468;
-					google_ad_height = 60;
-					//-->
-					</script>
-					<script type="text/javascript"
-					src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-					</script>
+<script type="text/javascript"><!--
+google_ad_client = "ca-pub-6585377934871161";
+/* Devimon_new */
+google_ad_slot = "8238755429";
+google_ad_width = 468;
+google_ad_height = 60;
+//-->
+</script>
+<script type="text/javascript"
+src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
 				</div>
 			</div>
 
