--- a/public/index.html
+++ b/public/index.html
@@ -43,8 +43,8 @@
 				
 			</div>
 			<div class="row-fluid">
-				<div class="span8 pull-right">
-					<h1 style="font-size:4em; line-height:45px;">Keeping your device safe.</h1>
+				<div class="span9 pull-right">
+					<h1 style="font-size:4em; line-height:45px; margin-right:100px;">Keeping your device safe.</h1>
 				</div>
 			</div>
 		</div>
@@ -55,17 +55,7 @@
 
 			<div class="row-fluid">
 				<div class="span12">
-<script type="text/javascript"><!--
-google_ad_client = "ca-pub-6585377934871161";
-/* Devimon_new */
-google_ad_slot = "8238755429";
-google_ad_width = 468;
-google_ad_height = 60;
-//-->
-</script>
-<script type="text/javascript"
-src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script>
+					<!-- Place for Banner -->
 				</div>
 			</div>
 
@@ -132,8 +122,6 @@ src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 		<h2>TODO</h2>
 		<ul>
 			<li>email confirmation</li>
-			<li>payment - Done. need webhook</li>
-			<li>Google analytic</li>
 			<li>backend production config</li>
 		</ul>
 
@@ -158,33 +146,52 @@ src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 	<script type="text/javascript" src="js/ext/mustache.js"></script>
 	<script data-main="js/main" src="js/ext/require.2.0.2.min.js"></script>
 
-<div id="payment" style="position:fixed; right:0px; top:50px;">
-	<a class="wepay-widget-button wepay-green" id="wepay_widget_anchor_504ab5c8bf98a" href="https://www.wepay.com/stores/245465/item/715176">Get One Month Subscription</a>
-	<script type="text/javascript">
-		var WePay = WePay || {};
-		WePay.load_widgets = WePay.load_widgets || function() { };
-		WePay.widgets = WePay.widgets || [];
-		WePay.widgets.push( {
-			object_id: 715176,
-			widget_type: "store_item_buy_now",
-			anchor_id: "wepay_widget_anchor_504ab5c8bf98a",
-			widget_options: {
-				store_id: 245465,
-				show_item_custom_options: true,
-				show_item_images: true,
-				show_item_price: true,
-				button_text_sold_out: "Sold Out",
-				button_text: "Get One Month Subscription"
-			}
-		});
-		if (!WePay.script) {
-			WePay.script = document.createElement('script');WePay.script.type = 'text/javascript';WePay.script.async = true;
-			WePay.script.src = 'https://static.wepay.com/min/js/widgets.v2.js';
-			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(WePay.script, s);
-		} else if (WePay.load_widgets) {
-			WePay.load_widgets();
-		}
-	</script>
+<div id="payment" style="position:fixed; right:10px; top:50px; padding-right:10px; background-color:White;" class="ctable">
+
+
+<div class="row-fluid">
+	<div class="span3">
+		<div style="margin-top:40px;">
+
+			<a class="wepay-widget-button wepay-green" id="wepay_widget_anchor_504c10f8c7d05" href="https://www.wepay.com/donations/157824">Donate</a>
+			<script type="text/javascript">
+				var WePay = WePay || {};
+				WePay.load_widgets = WePay.load_widgets || function() { };
+				WePay.widgets = WePay.widgets || [];
+				WePay.widgets.push( {
+					object_id: 157824,
+					widget_type: "donation_campaign",
+					anchor_id: "wepay_widget_anchor_504c10f8c7d05",
+					widget_options: {
+						allow_cover_fee: true,
+						enable_recurring: true,
+						allow_anonymous: true,
+						button_text: "Donate"
+					}
+				});
+				if (!WePay.script) {
+					WePay.script = document.createElement('script');WePay.script.type = 'text/javascript';WePay.script.async = true;
+					WePay.script.src = 'https://static.wepay.com/min/js/widgets.v2.js';
+					var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(WePay.script, s);
+				} else if (WePay.load_widgets) {
+					WePay.load_widgets();
+				}
+			</script>
+		</div>
+	</div>
+
+	<div class="span8">
+		<img src="http://robohash.org/devimon?size=150x150"/>
+	</div>
+
+</div>
+<a>Devimon needs your help to function!</a>
+<br>
+<a>Even a very small contribution helps.</a>
+<br>
+<a class="pull-right">Thanks!</a>
+<hr>
+	
 </div>
 
 
