--- a/public/index.html
+++ b/public/index.html
@@ -71,7 +71,7 @@
 						</p>
 					</article>
 				</div>
-				<div class="span6" id="interact">
+				<div class="span6" id="interact" style="">
 					<h5>Sign Up</h5>
 
 					<hr>
@@ -127,6 +127,7 @@
 	<footer>
 		<div class="container">
 				<div class="pull-right">
+					<a href="mailto:admin@devimon.net" style="margin-right:20px;">Email Me!</a>
 					<a href="#" style="margin-right:20px;">Terms</a>
 					<a href="#">Privacy</a>
 				</div>
@@ -187,7 +188,6 @@
 <br>
 <a class="pull-right">Thanks!</a>
 <hr>
-	
 </div>
 
 
