--- a/public/index.html
+++ b/public/index.html
@@ -72,7 +72,7 @@
 					</article>
 				</div>
 				<div class="span6" id="interact" style="">
-					<h5>Sign Up</h5>
+					<h5>Sign Up / Login</h5>
 
 					<hr>
 					<div class="form-horizontal">
