--- a/public/index.html
+++ b/public/index.html
@@ -119,6 +119,11 @@
 						When you bring <a href=".">Devimon</a> up on your browser, the browser maintains a conversation with  <a href=".">Devimon</a>.
 						As soon as your browser stops talking (when the laptop is closed), <a href=".">Devimon</a> assumes that somebody has closed the laptop, possibly with the intention of stealing it, and sends you an immediate SMS message. 
 					</p>
+					<p class="lead">
+						The idea is to have a precautionary and yet very simple mechanism to secure one's device before it's completely gone. While there are many awsome related softwares available such as <a href="http://preyproject.com/">Prey</a>, 
+						most of them concentrate on tracking one's device <u>after</u>
+						the device is stolen.
+					</p>
 				</div>
 			</div>
 		</div>
