--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
 			The mission statement would be "enhancing your 'mobile computing' experience on public places." 
 			<br><br>
 			If you are interseted or more ideas, drop me an email at <a href="mailto:yungookim@gmail.com">yungookim@gmail.com</a>.
-			And as well, I'm available for hire too!
+			And as well, I'm available for hire too! (Working experiences and knowledges in Basic server admin, databases (SQL & NoSQL), cross-platform Mobile, native Android&Blackberry, Webapp/websites end-to-end).
 			<br><br>
 			Thanks for checking the site out!
 		</div>
