minor correction on text

--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
 			The mission statement would be "enhancing your 'mobile computing' experience on public places." 
 			<br><br>
 			If you are interseted or have more ideas, drop me an email at <a href="mailto:yungookim@gmail.com">yungookim@gmail.com</a>.
-			Also, I'm available for hire too! (Working experiences and knowledges in Basic server admin (Linux), databases (SQL & NoSQL), cross-platform Mobile, native Android&Blackberry, Webapp/websites end-to-end).
+			Also, <b style="font-size:1.5em;">I'm available for hire too!</b> (Working experiences and knowledges in Basic server admin (Linux), databases (SQL & NoSQL), cross-platform Mobile, native Android&Blackberry, Webapp/websites end-to-end).
 			<br><br>
 			Thanks for checking the site out!
 		</div>
